# julia-bind

./: CMakeLists.txt  README.md
.github/workflows/: qa.yml
include/julia_bind/: julia_bind.hpp
tests/: CMakeLists.txt  simple.ji  test_built_in_types.cpp
tests/googletest/: googletest-download.cmake  googletest.cmake
tools/: act.sh  build.sh  test.sh
